public class Cliente {
    private String nombre;
    private double dineroDisponible;
    public Cliente(String nombre, int dineroDisponible) {
        this.nombre = nombre;
        this.dineroDisponible = dineroDisponible;
    }
}
