package LavadoDeAutos;

public class LavadoDeAutos {
    private Lavado[] tipoDeLavado;
    private int costoDelLavado;



}
