public enum Precio {
    int Precio1 = 20,
    int Precio2 = 40,
    int Precio3 = 60,

}
