public enum TipoDeLavado {
    BASICO,
    SUPER,
    BLACK
}
