@startuml
'https://plantuml.com/class-diagram

class LavadoDeAutos {
}

class cliente{
+ Nombre
+ DineroDisponible
}

LavadoDeAutos -->cliente
class Costo{
+ Precio
+ Recargo
+ Promocion
}
cliente --> Costo
enum TipoDeLavado{
BÁSICO
SUPER
BLACK
}
Costo --> TipoDeLavado
enum Precio{
20
40
60
}
TipoDeLavado --> Precio
@enduml